@@ -1,4 +1,18 @@
-debian/tmp/usr/lib/mono/gac/System*/1.0.*/
-debian/tmp/usr/lib/mono/gac/CustomMarshalers/1.0.*/
-debian/tmp/usr/lib/mono/1.0/System*.dll
-debian/tmp/usr/lib/mono/1.0/CustomMarshalers.dll*
+debian/tmp/usr/lib/mono/1.0/CustomMarshalers.dll
+debian/tmp/usr/lib/mono/1.0/System.Configuration.Install.dll
+debian/tmp/usr/lib/mono/1.0/System.Drawing.dll
+debian/tmp/usr/lib/mono/1.0/System.EnterpriseServices.dll
+debian/tmp/usr/lib/mono/1.0/System.Management.dll
+debian/tmp/usr/lib/mono/1.0/System.Security.dll
+debian/tmp/usr/lib/mono/1.0/System.ServiceProcess.dll
+debian/tmp/usr/lib/mono/1.0/System.Xml.dll
+debian/tmp/usr/lib/mono/1.0/System.dll
+debian/tmp/usr/lib/mono/gac/CustomMarshalers/1.0.5000.0__*/
+debian/tmp/usr/lib/mono/gac/System.Configuration.Install/1.0.5000.0__*/
+debian/tmp/usr/lib/mono/gac/System.Drawing/1.0.5000.0__*/
+debian/tmp/usr/lib/mono/gac/System.EnterpriseServices/1.0.5000.0__*/
+debian/tmp/usr/lib/mono/gac/System.Management/1.0.5000.0__*/
+debian/tmp/usr/lib/mono/gac/System.Security/1.0.5000.0__*/
+debian/tmp/usr/lib/mono/gac/System.ServiceProcess/1.0.5000.0__*/
+debian/tmp/usr/lib/mono/gac/System.Xml/1.0.5000.0__*/
+debian/tmp/usr/lib/mono/gac/System/1.0.5000.0__*/
