@@ -1,4 +1,24 @@
-debian/tmp/usr/lib/mono/gac/System*/2.0.*/
-debian/tmp/usr/lib/mono/gac/CustomMarshalers/2.0.*/
-debian/tmp/usr/lib/mono/2.0/System*.dll
-debian/tmp/usr/lib/mono/2.0/CustomMarshalers.dll*
+debian/tmp/usr/lib/mono/2.0/CustomMarshalers.dll
+debian/tmp/usr/lib/mono/2.0/System.Configuration.Install.dll
+debian/tmp/usr/lib/mono/2.0/System.Configuration.dll
+debian/tmp/usr/lib/mono/2.0/System.Core.dll
+debian/tmp/usr/lib/mono/2.0/System.Drawing.dll
+debian/tmp/usr/lib/mono/2.0/System.EnterpriseServices.dll
+debian/tmp/usr/lib/mono/2.0/System.Management.dll
+debian/tmp/usr/lib/mono/2.0/System.Security.dll
+debian/tmp/usr/lib/mono/2.0/System.ServiceProcess.dll
+debian/tmp/usr/lib/mono/2.0/System.Transactions.dll
+debian/tmp/usr/lib/mono/2.0/System.Xml.dll
+debian/tmp/usr/lib/mono/2.0/System.dll
+debian/tmp/usr/lib/mono/gac/CustomMarshalers/2.0.0.0__*/
+debian/tmp/usr/lib/mono/gac/System.Configuration.Install/2.0.0.0__*/
+debian/tmp/usr/lib/mono/gac/System.Configuration/2.0.0.0__*/
+debian/tmp/usr/lib/mono/gac/System.Core/3.5.0.0__*/
+debian/tmp/usr/lib/mono/gac/System.Drawing/2.0.0.0__*/
+debian/tmp/usr/lib/mono/gac/System.EnterpriseServices/2.0.0.0__*/
+debian/tmp/usr/lib/mono/gac/System.Management/2.0.0.0__*/
+debian/tmp/usr/lib/mono/gac/System.Security/2.0.0.0__*/
+debian/tmp/usr/lib/mono/gac/System.ServiceProcess/2.0.0.0__*/
+debian/tmp/usr/lib/mono/gac/System.Transactions/2.0.0.0__*/
+debian/tmp/usr/lib/mono/gac/System.Xml/2.0.0.0__*/
+debian/tmp/usr/lib/mono/gac/System/2.0.0.0__*/
