@@ -1,2 +1,6 @@
-debian/tmp/usr/lib/mono/gac/System*/2.1.*/
-debian/tmp/usr/lib/mono/2.1/System*.dll
+debian/tmp/usr/lib/mono/gac/System/2.1.0.0__*/
+debian/tmp/usr/lib/mono/gac/System.Core/2.1.0.0__*/
+debian/tmp/usr/lib/mono/gac/System.Xml.Core/2.1.0.0__*/
+debian/tmp/usr/lib/mono/2.1/System.dll
+debian/tmp/usr/lib/mono/2.1/System.Core.dll
+debian/tmp/usr/lib/mono/2.1/System.Xml.Core.dll
