@@ -1,7 +1,21 @@
-debian/tmp/usr/lib/mono/gac/Mono.*/1.0.*/
+debian/tmp/usr/lib/mono/1.0/Mono.CompilerServices.SymbolWriter.dll
+debian/tmp/usr/lib/mono/1.0/Mono.Data.SybaseClient.dll
+debian/tmp/usr/lib/mono/1.0/Mono.Data.TdsClient.dll
+debian/tmp/usr/lib/mono/1.0/Mono.Data.dll
+debian/tmp/usr/lib/mono/1.0/Mono.GetOptions.dll
+debian/tmp/usr/lib/mono/1.0/Mono.Http.dll
+debian/tmp/usr/lib/mono/1.0/Mono.Posix.dll
+debian/tmp/usr/lib/mono/1.0/Mono.Security.Win32.dll
+debian/tmp/usr/lib/mono/1.0/OpenSystem.C.dll
+debian/tmp/usr/lib/mono/gac/Mono.CompilerServices.SymbolWriter/1.0.5000.0__*/
+debian/tmp/usr/lib/mono/gac/Mono.Data.SybaseClient/1.0.5000.0__*/
+debian/tmp/usr/lib/mono/gac/Mono.Data.TdsClient/1.0.5000.0__*/
+debian/tmp/usr/lib/mono/gac/Mono.Data/1.0.5000.0__*/
+debian/tmp/usr/lib/mono/gac/Mono.GetOptions/1.0.5000.0__*/
+debian/tmp/usr/lib/mono/gac/Mono.Http/1.0.5000.0__*/
+debian/tmp/usr/lib/mono/gac/Mono.Posix/1.0.5000.0__*/
+debian/tmp/usr/lib/mono/gac/Mono.Security.Win32/1.0.5000.0__*/
+debian/tmp/usr/lib/mono/gac/OpenSystem.C/1.0.5000.0__*/
 debian/tmp/usr/lib/mono/gac/Mono.Cecil/
 debian/tmp/usr/lib/mono/gac/Mono.Cecil.Mdb/
-debian/tmp/usr/lib/mono/gac/OpenSystem.C/1.0.*
-debian/tmp/usr/lib/mono/gac/mono-service/1.0.*/
-debian/tmp/usr/lib/mono/1.0/Mono.*.dll
-debian/tmp/usr/lib/mono/1.0/OpenSystem.C.dll
+debian/tmp/usr/lib/mono/gac/mono-service/1.0.5000.0__*/
