@@ -1,5 +1,19 @@
-debian/tmp/usr/lib/mono/gac/Mono.*/2.0.*/
-debian/tmp/usr/lib/mono/gac/OpenSystem.C/2.0.*
-debian/tmp/usr/lib/mono/gac/mono-service/2.0.*/
-debian/tmp/usr/lib/mono/2.0/Mono.*.dll
+debian/tmp/usr/lib/mono/2.0/Mono.CompilerServices.SymbolWriter.dll
+debian/tmp/usr/lib/mono/2.0/Mono.Data.SybaseClient.dll
+debian/tmp/usr/lib/mono/2.0/Mono.Data.TdsClient.dll
+debian/tmp/usr/lib/mono/2.0/Mono.Data.dll
+debian/tmp/usr/lib/mono/2.0/Mono.GetOptions.dll
+debian/tmp/usr/lib/mono/2.0/Mono.Http.dll
+debian/tmp/usr/lib/mono/2.0/Mono.Posix.dll
+debian/tmp/usr/lib/mono/2.0/Mono.Security.Win32.dll
 debian/tmp/usr/lib/mono/2.0/OpenSystem.C.dll
+debian/tmp/usr/lib/mono/gac/Mono.CompilerServices.SymbolWriter/2.0.0.0__*/
+debian/tmp/usr/lib/mono/gac/Mono.Data.SybaseClient/2.0.0.0__*/
+debian/tmp/usr/lib/mono/gac/Mono.Data.TdsClient/2.0.0.0__*/
+debian/tmp/usr/lib/mono/gac/Mono.Data/2.0.0.0__*/
+debian/tmp/usr/lib/mono/gac/Mono.GetOptions/2.0.0.0__*/
+debian/tmp/usr/lib/mono/gac/Mono.Http/2.0.0.0__*/
+debian/tmp/usr/lib/mono/gac/Mono.Posix/2.0.0.0__*/
+debian/tmp/usr/lib/mono/gac/Mono.Security.Win32/2.0.0.0__*/
+debian/tmp/usr/lib/mono/gac/OpenSystem.C/2.0.0.0__*/
+debian/tmp/usr/lib/mono/gac/mono-service/2.0.0.0__*/
