@@ -1,11 +1,0 @@
-.TH UNDOCUMENTED 1 "January 15th, 2004" "Debian GNU/Linux" "Mono Manual"
-.SH NAME
-undocumented \- No manpage for this program.
-.SH DESCRIPTION
-This
-.B program
-does not have a manpage. Run this command with the
-.B help
-switch to see what it does. For further information, refer to the .NET
-documentation from the Mono project, located on
-.B http://www.go-mono.com:8080/
