@@ -30,5 +30,40 @@ debian/tmp/usr/bin/soapsuds
 debian/tmp/usr/bin/sqlsharp
 debian/tmp/usr/bin/wsdl
 debian/tmp/usr/bin/xsd
-debian/tmp/usr/lib/mono/1.0/*.exe*
+debian/tmp/usr/lib/mono/1.0/CorCompare.exe
+debian/tmp/usr/lib/mono/1.0/al.exe
+debian/tmp/usr/lib/mono/1.0/browsercaps-updater.exe
+debian/tmp/usr/lib/mono/1.0/caspol.exe
+debian/tmp/usr/lib/mono/1.0/cert2spc.exe
+debian/tmp/usr/lib/mono/1.0/certmgr.exe
+debian/tmp/usr/lib/mono/1.0/chktrust.exe
+debian/tmp/usr/lib/mono/1.0/cilc.exe
+debian/tmp/usr/lib/mono/1.0/culevel.exe
+debian/tmp/usr/lib/mono/1.0/disco.exe
+debian/tmp/usr/lib/mono/1.0/dtd2rng.exe
+debian/tmp/usr/lib/mono/1.0/dtd2xsd.exe
+debian/tmp/usr/lib/mono/1.0/genxs.exe
+debian/tmp/usr/lib/mono/1.0/ictool.exe
+debian/tmp/usr/lib/mono/1.0/ilasm.exe
+debian/tmp/usr/lib/mono/1.0/installvst.exe
+debian/tmp/usr/lib/mono/1.0/macpack.exe
+debian/tmp/usr/lib/mono/1.0/makecert.exe
+debian/tmp/usr/lib/mono/1.0/mkbundle.exe
+debian/tmp/usr/lib/mono/1.0/mono-api-diff.exe
+debian/tmp/usr/lib/mono/1.0/mono-api-info.exe
+debian/tmp/usr/lib/mono/1.0/mono-shlib-cop.exe*
+debian/tmp/usr/lib/mono/1.0/mono-xmltool.exe
+debian/tmp/usr/lib/mono/1.0/monolinker.exe
+debian/tmp/usr/lib/mono/1.0/monop.exe
+debian/tmp/usr/lib/mono/1.0/mozroots.exe
+debian/tmp/usr/lib/mono/1.0/permview.exe
+debian/tmp/usr/lib/mono/1.0/resgen.exe
+debian/tmp/usr/lib/mono/1.0/secutil.exe
+debian/tmp/usr/lib/mono/1.0/setreg.exe
+debian/tmp/usr/lib/mono/1.0/signcode.exe
+debian/tmp/usr/lib/mono/1.0/sn.exe
+debian/tmp/usr/lib/mono/1.0/soapsuds.exe
+debian/tmp/usr/lib/mono/1.0/sqlsharp.exe
+debian/tmp/usr/lib/mono/1.0/wsdl.exe
+debian/tmp/usr/lib/mono/1.0/xsd.exe
 debian/mono-api-check /usr/bin/
