@@ -1,0 +1,1 @@
+debian/tmp/usr/share/man/man1/mono-service.1
