@@ -1,10 +1,18 @@
-debian/tmp/usr/bin/wsdl2 
-debian/tmp/usr/bin/monop2
-debian/tmp/usr/bin/ilasm2 
-debian/tmp/usr/bin/resgen2
-debian/tmp/usr/bin/mono-api-info2
-debian/tmp/usr/bin/mkbundle2
-debian/tmp/usr/bin/sgen
 debian/tmp/usr/bin/al2
 debian/tmp/usr/bin/httpcfg
-debian/tmp/usr/lib/mono/2.0/*.exe*
+debian/tmp/usr/bin/ilasm2 
+debian/tmp/usr/bin/mkbundle2
+debian/tmp/usr/bin/mono-api-info2
+debian/tmp/usr/bin/monop2
+debian/tmp/usr/bin/resgen2
+debian/tmp/usr/bin/sgen
+debian/tmp/usr/bin/wsdl2 
+debian/tmp/usr/lib/mono/2.0/al.exe
+debian/tmp/usr/lib/mono/2.0/httpcfg.exe
+debian/tmp/usr/lib/mono/2.0/ilasm.exe
+debian/tmp/usr/lib/mono/2.0/mkbundle.exe
+debian/tmp/usr/lib/mono/2.0/mono-api-info.exe
+debian/tmp/usr/lib/mono/2.0/monop.exe
+debian/tmp/usr/lib/mono/2.0/resgen.exe
+debian/tmp/usr/lib/mono/2.0/sgen.exe
+debian/tmp/usr/lib/mono/2.0/wsdl.exe
