@@ -1,6 +1,5 @@
-debian/man/wsdl2.1
-debian/man/monop2.1
-debian/man/ilasm2.1
-debian/man/resgen2.1
-debian/man/mono-service2.1
+debian/tmp/usr/share/man/man1/wsdl2.1
+debian/tmp/usr/share/man/man1/monop2.1
+debian/tmp/usr/share/man/man1/ilasm2.1
+debian/tmp/usr/share/man/man1/resgen2.1
 debian/tmp/usr/share/man/man1/httpcfg.1
