@@ -1,1 +1,1 @@
-debian/usr/share/man/man1/prj2make.1
+debian/tmp/usr/share/man/man1/prj2make.1
